--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Metszab GPA/CGPA Calculator</title>
+    <title>Muetszab GPA/CGPA Calculator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Metszab GPA/CGPA Calculator</h1>
+            <h1>Muetszab GPA/CGPA Calculator</h1>
             <p class="subtitle">Calculate your semester GPA and overall CGPA</p>
         </header>
 
